--- a/cards/abdullah.html
+++ b/cards/abdullah.html
@@ -5,68 +5,121 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>عبدالله الشريف</title>
 <style>
+  /* ===== خلفية الصفحة ===== */
   body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #f0f2f5, #ffffff);
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #f6d365, #fda085);
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
   }
+
+  /* ===== بطاقة الملف الشخصي ===== */
   .profile-card {
-    background: #fff;
-    border-radius: 16px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    max-width: 350px;
-    width: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+    width: 350px;
     padding: 30px;
     text-align: center;
+    position: relative;
   }
+
+  /* ===== صورة عبدالله ===== */
   .profile-card img {
-    width: 120px;
-    height: 120px;
+    width: 130px;
+    height: 130px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 15px;
+    border: 4px solid #fda085;
+    margin-bottom: 20px;
   }
+
+  /* ===== الاسم ===== */
   .profile-card h1 {
-    margin: 10px 0 5px;
-    font-size: 24px;
+    margin: 0 0 10px;
+    font-size: 26px;
     color: #333;
   }
+
+  /* ===== المسمى الوظيفي ===== */
   .profile-card p {
-    margin: 5px 0 15px;
+    margin: 0 0 20px;
     color: #555;
+    font-size: 16px;
   }
+
+  /* ===== أزرار الروابط ===== */
+  .social-links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 12px;
+  }
+
   .social-links a {
-    display: inline-block;
-    margin: 5px;
-    padding: 10px 14px;
-    border-radius: 8px;
-    color: #fff;
+    flex: 1 1 40%;
+    padding: 10px 0;
     text-decoration: none;
+    color: #fff;
     font-weight: bold;
-    transition: 0.2s;
+    border-radius: 12px;
+    transition: 0.3s;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
   }
-  .social-links a.facebook { background: #3b5998; }
-  .social-links a.instagram { background: #e4405f; }
-  .social-links a.whatsapp { background: #25D366; }
-  .social-links a:hover { opacity: 0.85; transform: scale(1.05); }
+
+  .social-links a.facebook { background-color: #3b5998; }
+  .social-links a.instagram { background-color: #e4405f; }
+  .social-links a.whatsapp { background-color: #25D366; }
+  .social-links a.linkedin { background-color: #0a66c2; }
+
+  .social-links a:hover {
+    transform: translateY(-3px);
+    opacity: 0.9;
+  }
+
+  /* ===== زر الرجوع للقائمة ===== */
+  .back-link {
+    display: inline-block;
+    margin-top: 25px;
+    padding: 10px 20px;
+    text-decoration: none;
+    background-color: #ff7e5f;
+    color: #fff;
+    border-radius: 12px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .back-link:hover {
+    opacity: 0.9;
+    transform: translateY(-2px);
+  }
 </style>
 </head>
 <body>
 
 <div class="profile-card">
-  <img src="https://via.placeholder.com/120" alt="عبدالله الشريف">
+  <!-- صورة عبدالله -->
+  <img src="https://via.placeholder.com/130" alt="عبدالله الشريف">
+  
+  <!-- الاسم والمسمى -->
   <h1>عبدالله الشريف</h1>
   <p>مصمم ويب</p>
+
+  <!-- روابط التواصل -->
   <div class="social-links">
     <a href="https://facebook.com/username" class="facebook" target="_blank">فيسبوك</a>
     <a href="https://instagram.com/username" class="instagram" target="_blank">انستا</a>
     <a href="https://wa.me/0777XXXXXX" class="whatsapp" target="_blank">واتساب</a>
+    <a href="https://linkedin.com/in/username" class="linkedin" target="_blank">لينكدإن</a>
   </div>
+
+  <!-- زر الرجوع -->
+  <a href="../index.html" class="back-link">رجوع للقائمة</a>
 </div>
 
 </body>
