--- a/cards/abdullah.html
+++ b/cards/abdullah.html
@@ -5,121 +5,125 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>عبدالله الشريف</title>
 <style>
-  /* ===== خلفية الصفحة ===== */
-  body {
-    margin: 0;
+/* ===== خلفية الصفحة ===== */
+body {
+    margin: 0; 
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #f6d365, #fda085);
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
-  /* ===== بطاقة الملف الشخصي ===== */
-  .profile-card {
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0 15px 40px rgba(0,0,0,0.2);
-    width: 350px;
-    padding: 30px;
+/* ===== بطاقة الملف الشخصي ===== */
+.profile-card {
+    background: #fff;
+    border-radius: 25px;
+    width: 360px;
+    padding: 35px 30px;
     text-align: center;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.3);
     position: relative;
-  }
+    overflow: hidden;
+}
 
-  /* ===== صورة عبدالله ===== */
-  .profile-card img {
-    width: 130px;
-    height: 130px;
+/* ===== إطار الصورة ===== */
+.profile-card img {
+    width: 140px;
+    height: 140px;
     border-radius: 50%;
     object-fit: cover;
-    border: 4px solid #fda085;
+    border: 5px solid #ff7e5f;
     margin-bottom: 20px;
-  }
+    transition: transform 0.3s;
+}
+.profile-card img:hover {
+    transform: scale(1.05);
+}
 
-  /* ===== الاسم ===== */
-  .profile-card h1 {
-    margin: 0 0 10px;
-    font-size: 26px;
+/* ===== الاسم والمسمى ===== */
+.profile-card h1 {
+    margin: 0 0 5px;
+    font-size: 28px;
     color: #333;
-  }
-
-  /* ===== المسمى الوظيفي ===== */
-  .profile-card p {
-    margin: 0 0 20px;
-    color: #555;
+}
+.profile-card p {
+    margin: 0 0 25px;
+    color: #666;
     font-size: 16px;
-  }
+}
 
-  /* ===== أزرار الروابط ===== */
-  .social-links {
+/* ===== أيقونات الشبكات ===== */
+.social-links {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
     gap: 12px;
-  }
-
-  .social-links a {
-    flex: 1 1 40%;
-    padding: 10px 0;
-    text-decoration: none;
+    flex-wrap: wrap;
+}
+.social-links a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48%;
+    padding: 12px 0;
+    border-radius: 12px;
     color: #fff;
     font-weight: bold;
-    border-radius: 12px;
+    text-decoration: none;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.2);
     transition: 0.3s;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-  }
-
-  .social-links a.facebook { background-color: #3b5998; }
-  .social-links a.instagram { background-color: #e4405f; }
-  .social-links a.whatsapp { background-color: #25D366; }
-  .social-links a.linkedin { background-color: #0a66c2; }
-
-  .social-links a:hover {
-    transform: translateY(-3px);
+}
+.social-links a.facebook { background: #3b5998; }
+.social-links a.instagram { background: #e4405f; }
+.social-links a.whatsapp { background: #25D366; }
+.social-links a.linkedin { background: #0a66c2; }
+.social-links a:hover {
+    transform: translateY(-3px) scale(1.03);
     opacity: 0.9;
-  }
+}
 
-  /* ===== زر الرجوع للقائمة ===== */
-  .back-link {
+/* ===== زر حفظ جهة الاتصال ===== */
+.save-contact {
     display: inline-block;
     margin-top: 25px;
-    padding: 10px 20px;
-    text-decoration: none;
-    background-color: #ff7e5f;
+    padding: 14px 25px;
+    background: linear-gradient(45deg, #ff7e5f, #feb47b);
     color: #fff;
-    border-radius: 12px;
     font-weight: bold;
+    text-decoration: none;
+    border-radius: 18px;
+    font-size: 16px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.3);
     transition: 0.3s;
-  }
-
-  .back-link:hover {
+}
+.save-contact:hover {
+    transform: scale(1.05);
     opacity: 0.9;
-    transform: translateY(-2px);
-  }
+}
 </style>
 </head>
 <body>
 
 <div class="profile-card">
   <!-- صورة عبدالله -->
-  <img src="https://via.placeholder.com/130" alt="عبدالله الشريف">
+  <img src="https://i.imgur.com/IMxPZIz.png" alt="عبدالله الشريف">
   
   <!-- الاسم والمسمى -->
   <h1>عبدالله الشريف</h1>
   <p>مصمم ويب</p>
-
-  <!-- روابط التواصل -->
+  
+  <!-- أيقونات الشبكات -->
   <div class="social-links">
     <a href="https://facebook.com/username" class="facebook" target="_blank">فيسبوك</a>
     <a href="https://instagram.com/username" class="instagram" target="_blank">انستا</a>
     <a href="https://wa.me/0777XXXXXX" class="whatsapp" target="_blank">واتساب</a>
     <a href="https://linkedin.com/in/username" class="linkedin" target="_blank">لينكدإن</a>
   </div>
-
-  <!-- زر الرجوع -->
-  <a href="../index.html" class="back-link">رجوع للقائمة</a>
+  
+  <!-- زر حفظ جهة الاتصال -->
+  <a href="cards/abdullah.vcf" download class="save-contact">حفظ جهة الاتصال</a>
 </div>
 
 </body>
