--- a/cards/abdullah.html
+++ b/cards/abdullah.html
@@ -1,108 +1,191 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>عبدالله الشريف</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>عبدالله الشريف — مصمم ويب | صاحب شركة تقنية</title>
 <style>
-body {
-    margin: 0; padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+:root{
+  --bg1:#0f1724;   /* غامق جداً */
+  --bg2:#10243a;   /* كحلي */
+  --accent:#f6b76b;/* ذهب دافيء */
+  --muted:#9aa6b2;
+  --card:#0f1724cc; /* شفافية لل-glass */
+  --glass:#ffffff0f;
 }
 
-/* بطاقة الملف الشخصي */
-.profile-card {
-    background: #fff;
-    border-radius: 25px;
-    width: 360px;
-    padding: 35px 30px;
-    text-align: center;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.3);
-    overflow: hidden;
+/* صفحة كاملة */
+*{box-sizing:border-box}
+body{
+  margin:0;padding:30px;
+  font-family: "Segoe UI", Tahoma, Arial, sans-serif;
+  background: radial-gradient(1200px 600px at 10% 10%, #112a44 0%, var(--bg1) 18%, var(--bg2) 60%), linear-gradient(180deg, #071028 0%, #071028 100%);
+  color:#fff;
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 
-/* صورة عبدالله */
-.profile-card img {
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 5px solid #ff7e5f;
-    margin-bottom: 20px;
-    transition: transform 0.3s;
-}
-.profile-card img:hover { transform: scale(1.05); }
-
-/* الاسم والمسمى */
-.profile-card h1 { margin: 0 0 5px; font-size: 28px; color: #333; }
-.profile-card p { margin: 0 0 25px; color: #666; font-size: 16px; }
-
-/* أيقونات الشبكات */
-.social-links {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    flex-wrap: wrap;
-}
-.social-links a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 48px; height: 48px;
-    border-radius: 50%;
-    color: #fff;
-    transition: 0.3s;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.2);
-}
-.social-links a svg { width: 24px; height: 24px; }
-
-/* ألوان كل شبكة */
-.social-links a.facebook { background: #3b5998; }
-.social-links a.instagram { background: #e4405f; }
-.social-links a.whatsapp { background: #25D366; }
-.social-links a.linkedin { background: #0a66c2; }
-
-/* تأثير Hover */
-.social-links a:hover {
-    transform: scale(1.15);
-    opacity: 0.9;
+/* الحاوية */
+.profile-wrap{
+  width:360px;
+  border-radius:22px;
+  padding:28px;
+  position:relative;
+  overflow:hidden;
+  box-shadow: 0 30px 80px rgba(2,6,23,0.72);
+  background:
+    linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+  backdrop-filter: blur(6px);
+  border: 1px solid rgba(255,255,255,0.04);
 }
 
-/* زر حفظ جهة الاتصال */
-.save-contact {
-    display: inline-block;
-    margin-top: 25px;
-    padding: 14px 25px;
-    background: linear-gradient(45deg, #ff7e5f, #feb47b);
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 18px;
-    font-size: 16px;
-    box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-    transition: 0.3s;
+/* شعار دائري خلف الصورة (ديكور) */
+.profile-wrap::before{
+  content:"";
+  position:absolute;
+  right:-80px; top:-80px;
+  width:220px;height:220px;
+  background: conic-gradient(from 180deg at 50% 50%, rgba(246,183,107,0.18), rgba(255,255,255,0.04));
+  border-radius:50%;
+  filter: blur(18px);
+  transform: rotate(20deg);
 }
-.save-contact:hover { transform: scale(1.05); opacity: 0.9; }
+
+/* الصورة */
+.avatar {
+  width:140px;height:140px;border-radius:50%;
+  margin:0 auto 14px auto;display:block;
+  object-fit:cover;border:5px solid rgba(246,183,107,0.95);
+  box-shadow: 0 12px 30px rgba(0,0,0,0.5), 0 2px 6px rgba(246,183,107,0.06) inset;
+  transition: transform .25s ease;
+}
+.avatar:hover{ transform: scale(1.03); }
+
+/* الاسم والعنوان */
+.name { text-align:center; margin:0 0 6px; font-size:22px; letter-spacing:0.4px; color:#fff; font-weight:700; }
+.title { text-align:center; margin:0 0 16px; color:var(--muted); font-size:14px; }
+
+/* الوصف (About) */
+.about {
+  background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+  border-radius:12px; padding:12px 14px; color:#d6dde3; font-size:13px; line-height:1.35;
+  margin-bottom:18px;
+  box-shadow: 0 8px 18px rgba(2,6,23,0.45);
+}
+
+/* أزرار الشبكات - أيقونات دائرية */
+.socials { display:flex; gap:10px; justify-content:center; margin-bottom:16px; }
+.icon-btn{
+  width:56px;height:56px;border-radius:12px;display:inline-flex;align-items:center;justify-content:center;
+  color:#fff;text-decoration:none;font-weight:700;
+  transition: transform .18s ease, box-shadow .18s ease;
+  box-shadow: 0 8px 22px rgba(2,6,23,0.5);
+}
+/* ألوان مرتبة ومحترفة (ناعمة لكن قوية) */
+.icon-btn.fb{ background: linear-gradient(180deg,#2f4f91,#2b3f78); }
+.icon-btn.ig{ background: linear-gradient(180deg,#c13584,#9b2b60); }
+.icon-btn.wa{ background: linear-gradient(180deg,#00b66a,#0c8f4f); }
+.icon-btn.li{ background: linear-gradient(180deg,#0d66b2,#074e8a); }
+
+.icon-btn:hover{ transform: translateY(-6px) scale(1.03); box-shadow: 0 18px 40px rgba(0,0,0,0.6); }
+
+/* صف الاتصال (Call - Email - Save) */
+.actions{ display:flex; gap:10px; margin-top:6px; justify-content:center; flex-wrap:wrap; }
+.action{
+  display:inline-flex;align-items:center;gap:10px;padding:10px 12px;border-radius:12px;
+  text-decoration:none;color:#071028;font-weight:700;font-size:14px;
+  background: linear-gradient(180deg,#f7e7d6,#fcefe0);
+  box-shadow: 0 10px 30px rgba(246,183,107,0.12);
+  transition: transform .18s ease;
+}
+.action.call{ background: linear-gradient(180deg,#ffd29b,#ffb26b); color:#071028; }
+.action.email{ background: linear-gradient(180deg,#d1e8ff,#a9d3ff); color:#071028; }
+.action.save{ background: linear-gradient(45deg,#ff7e5f,#feb47b); color:#071028; }
+
+.action:hover{ transform: translateY(-6px); }
+
+/* أيقونات داخل الأزرار صغيرة */
+.action svg{ width:18px;height:18px; }
+
+/* ملاحظة صغيرة */
+.note{ text-align:center;color:var(--muted);font-size:12px;margin-top:12px; }
+
+/* استجابة للموبايل */
+@media (max-width:420px){
+  body{ padding:18px; }
+  .profile-wrap{ width:100%; padding:22px; }
+  .avatar{ width:120px;height:120px; }
+  .icon-btn{ width:50px;height:50px; }
+}
 </style>
 </head>
 <body>
 
-<div class="profile-card">
-  <img src="https://i.imgur.com/IMxPZIz.png" alt="عبدالله الشريف">
-  <h1>عبدالله الشريف</h1>
-  <p>مصمم ويب</p>
+<div class="profile-wrap" role="region" aria-label="بطاقة عبدالله الشريف">
+  <!-- الصورة (استبدل الرابط برابط Imgur أو آخر) -->
+  <img class="avatar" src="https://i.imgur.com/IMxPZIz.png" alt="صورة عبدالله الشريف">
 
-  <div class="social-links">
-    <a href="https://facebook.com/username" class="facebook" target="_blank">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.406.593 24 1.325 24h11.495v-9.294H9.691v-3.622h3.129V8.413c0-3.1 1.893-4.788 4.657-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.716-1.795 1.763v2.31h3.587l-.467 3.622h-3.12V24h6.116C23.407 24 24 23.407 24 22.676V1.325C24 .593 23.407 0 22.675 0z"/></svg>
+  <!-- الاسم والوصف القصير -->
+  <h1 class="name">عبدالله الشريف</h1>
+  <div class="title">مالك شركة تقنية • قائد مشاريع ويب متقدم</div>
+
+  <!-- فقرة "عن عبدالله" — نبرة قوية ومحتشمة -->
+  <div class="about">
+    <strong>عن عبدالله:</strong>
+    <br>
+    عبدالله صاحب شركة تقنية متقدمة ومطور برمجيات شديد التركيز — خبرته تمتد في بناء أنظمة ويب احترافية ومنصات جاهزة للإنتاج. يتميز بأسلوب عمل عدواني على الخطأ: يكتشف المشكلة، يحرق التعقيد، ويخرج بحل نظيف وسريع. قائد فرق، صانع قرارات تقنية سريعة، وصاحب فكر تطبيقي يضع النتائج أولاً.
+  </div>
+
+  <!-- أزرار التواصل (أيقونات SVG داخل كل زر) -->
+  <div class="socials" role="navigation" aria-label="روابط التواصل">
+    <a class="icon-btn fb" href="https://facebook.com/username" target="_blank" title="فيسبوك — عبدالله">
+      <!-- Facebook SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M22 12a10 10 0 10-11.5 9.9v-7h-2.2V12h2.2V9.8c0-2.2 1.3-3.4 3.3-3.4.95 0 1.95.17 1.95.17v2.15h-1.1c-1.09 0-1.43.68-1.43 1.38V12h2.44l-.39 2.92H13.5v7A10 10 0 0022 12z"/></svg>
     </a>
-    <a href="https://instagram.com/username" class="instagram" target="_blank">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.342 3.608 1.317.975.975 1.255 2.242 1.317 3.608.058 1.265.069 1.645.069 4.849s-.012 3.584-.07 4.849c-.062 1.366-.342 2.633-1.317 3.608-.975.975-2.242 1.255-3.608 1.317-1.265.058-1.645.069-4.849.069s-3.584-.012-4.849-.07c-1.366-.062-2.633-.342-3.608-1.317-.975-.975-1.255-2.242-1.317-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.849c.062-1.366.342-2.633 1.317-3.608.975-.975 2.242-1.255 3.608-1.317C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.014 7.052.072 5.77.13 4.602.428 3.675 1.355c-.927.927-1.225 2.095-1.283 3.377C2.014 5.668 2 6.077 2 9.336v5.328c0 3.259.014 3.668.072 4.948.058 1.282.356 2.45 1.283 3.377.927.927 2.095 1.225 3.377 1.283 1.28.058 1.689.072 4.948.072s3.668-.014 4.948-.072c1.282-.058 2.45-.356 3.377-1.283.927-.927 1.225-2.095 1.283-3.377.058-1.28.072-1.689.072-4.948s-.014-3.668-.072-4.948c-.058-1.282-.356-2.45-1.283-3.377-.927-.927-2.095-1.225-3.377-1.283C15.668.014 15.259 0 12 0z"/><circle cx="12" cy="12" r="3.2"/></svg>
+
+    <a class="icon-btn ig" href="https://instagram.com/username" target="_blank" title="انستا — عبدالله">
+      <!-- Instagram SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 7.3A4.2 4.2 0 1016.2 13 4.2 4.2 0 0012 9.3zm5.4-3.6a1.2 1.2 0 11-1.2 1.2 1.2 1.2 0 011.2-1.2z"/></svg>
     </a>
-    <a href="https://wa.me/0777XXXXXX" class="whatsapp" target="_blank">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M.057 24l1.687-6.163a11.933 11.933 0 01-1.64-6.024C.104 5.34 5.42 0 12 0c3.21 0 6.21 1.256 8.485 3.515C22.744 5.79 24 8.79 24 12c0 6.58-5.42 11.896-11.985 11.987a11.946 11.946 0 01-6.024-1.64L.057 24zm6.597-3.807c1.749.995 3.882 1.578 6.035 1.577 5.421 0 9.825-4.404 9.825-9.824 0-5.421-4.404-9.825-9.825-9.825-5.42 0-9.824 4.404-9.824 9.825 0 2.105.651 4.167 1.888 5.844l-.999 3.648 3.544-.929zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.148-1.758-.867-2.031-.967-.272-.099-.47-.148-.669.149-.198.297-.768.967-.941 1.164-.173.198-.347.223-.644.074-.297-.148-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.654-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.52.149-.173.198-.297.297-.495.099-.198.05-.372-.025-.52-.074-.148-.669-1.611-.916-2.206-.242-.579-.487-.5-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.148.198 2.096 3.2 5.076 4.487.709.306 1.26.489 1.69.626.71.227 1
+
+    <a class="icon-btn wa" href="https://wa.me/0777XXXXXX" target="_blank" title="واتساب — عبدالله">
+      <!-- WhatsApp SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M20.5 3.5A11.9 11.9 0 0012 .1 11.9 11.9 0 003.5 3.5a11.9 11.9 0 00-3 8.5A11.9 11.9 0 003.5 19.5L2 23l3.5-1.5A11.9 11.9 0 0012 23a11.9 11.9 0 008.5-3.5A11.9 11.9 0 0023 12a11.9 11.9 0 00-2.5-8.5zM12 20a8 8 0 118-8 8 8 0 01-8 8z"/><path d="M17.2 14.1l-1.1-.5a1 1 0 00-1.1.2l-.7.8a6 6 0 01-2.9-2.9l.8-.7a1 1 0 00.2-1.1l-.5-1.1a1 1 0 00-1-.6H8.7a1 1 0 00-1 .8A6.1 6.1 0 008 14a6 6 0 006 6 1 1 0 00.8-1v-2.1a1 1 0 00-.6-1z"/></svg>
+    </a>
+
+    <a class="icon-btn li" href="https://linkedin.com/in/username" target="_blank" title="لينكدإن — عبدالله">
+      <!-- LinkedIn SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M4.98 3.5a2.5 2.5 0 11.02 0zM3 8.98h4v12H3zM9 8.98h3.8v1.6h.1c.5-.9 1.7-1.9 3.5-1.9 3.8 0 4.5 2.5 4.5 5.8v6.5h-4v-5.7c0-1.4 0-3.3-2-3.3-2.1 0-2.4 1.6-2.4 3.2v5.8H9z"/></svg>
+    </a>
+  </div>
+
+  <!-- أزرار الاتصال والحفظ -->
+  <div class="actions" role="group" aria-label="إجراءات الاتصال">
+    <a class="action call" href="tel:0777123456" title="اتصال مباشر">
+      <!-- phone svg -->
+      <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M6.6 10.79a15.05 15.05 0 006.61 6.61l2.2-2.2a1 1 0 01.98-.26c1.1.35 2.3.54 3.55.54a1 1 0 011 1V20a1 1 0 01-1 1C9.39 21 3 14.61 3 6a1 1 0 011-1h2.5a1 1 0 011 1c0 1.25.19 2.45.54 3.55a1 1 0 01-.26.98l-2.18 2.26z"/></svg>
+      اتصل
+    </a>
+
+    <a class="action email" href="mailto:email@example.com" title="إرسال إيميل">
+      <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M20 4H4a2 2 0 00-2 2v.2l10 6.2 10-6.2V6a2 2 0 00-2-2zM22 8.5l-10 6.2L2 8.5V18a2 2 0 002 2h16a2 2 0 002-2V8.5z"/></svg>
+      ايميل
+    </a>
+
+    <a class="action save" href="cards/abdullah.vcf" download title="حفظ جهة الاتصال">
+      <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M12 2a3 3 0 013 3v1h3a2 2 0 012 2v10a2 2 0 01-2 2H6a2 2 0 01-2-2V8a2 2 0 012-2h3V5a3 3 0 013-3zM9 9v-1a3 3 0 016 0v1h-6z"/></svg>
+      حفظ جهة الاتصال
+    </a>
+  </div>
+
+  <div class="note">رابط البطاقة للاستخدام في الـ NFC: <br>
+    <small style="color:#b8c7d3; direction:ltr; display:block; margin-top:6px;">
+      https://issaahedalqaisi.github.io/NFC_site/cards/abdullah.html
+    </small>
+  </div>
+</div>
+
+</body>
+</html>
