--- a/cards/issa.html
+++ b/cards/issa.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>عبدالله الشريف — مصمم ويب | صاحب شركة تقنية</title>
+<title>AI engineering</title>
 <style>
 :root{
   --bg1:#0f1724;   /* غامق جداً */
@@ -128,21 +128,23 @@ body{
   <img class="avatar" src="https://i.imgur.com/UVOgujk.jpeg" alt="issa">
 
   <!-- الاسم والوصف القصير -->
-  <h1 class="name">عبدالله الشريف</h1>
-  <div class="title">مالك شركة تقنية • قائد مشاريع ويب متقدم</div>
+  <h1 class="name">Issa Ahed Alqaisi</h1>
+  <div class="title">Denaloper</div>
 
   <!-- فقرة "عن عبدالله" — نبرة قوية ومحتشمة -->
   <div class="about">
     <strong>About Issa AQ:</strong>
     <br>
-    - Inelligent system engineering
-    - I have more than 2 years experince  with AI like LLMs , Computer vision and more
-    - Model analyst and study of model statuses and their evaluation
+    - Inelligent system engineering.
+    <a></a>
+    - I have more than 2 years experince  with AI like LLMs , Computer vision and more.
+    <a></a>
+    - Model analyst and study of model statuses and their evaluation.
   </div>
 
   <!-- أزرار التواصل (أيقونات SVG داخل كل زر) -->
   <div class="socials" role="navigation" aria-label="روابط التواصل">
-    <a class="icon-btn fb" href="https://www.facebook.com/issa.alqaisi.545" target="_blank" title="فيسبوك — عبدالله">
+    <a class="icon-btn fb" href="https://www.facebook.com/issa.alqaisi.545" target="_blank" title="Issa facebook">
       <!-- Facebook SVG -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M22 12a10 10 0 10-11.5 9.9v-7h-2.2V12h2.2V9.8c0-2.2 1.3-3.4 3.3-3.4.95 0 1.95.17 1.95.17v2.15h-1.1c-1.09 0-1.43.68-1.43 1.38V12h2.44l-.39 2.92H13.5v7A10 10 0 0022 12z"/></svg>
     </a>
@@ -152,12 +154,12 @@ body{
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 7.3A4.2 4.2 0 1016.2 13 4.2 4.2 0 0012 9.3zm5.4-3.6a1.2 1.2 0 11-1.2 1.2 1.2 1.2 0 011.2-1.2z"/></svg>
     </a>
 
-    <a class="icon-btn wa" href="https://wa.me/0781179190" target="_blank" title="Issa Whats">
+    <a class="icon-btn wa" href="https://wa.me/+962781179190" target="_blank" title="Issa Whats">
       <!-- WhatsApp SVG -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M20.5 3.5A11.9 11.9 0 0012 .1 11.9 11.9 0 003.5 3.5a11.9 11.9 0 00-3 8.5A11.9 11.9 0 003.5 19.5L2 23l3.5-1.5A11.9 11.9 0 0012 23a11.9 11.9 0 008.5-3.5A11.9 11.9 0 0023 12a11.9 11.9 0 00-2.5-8.5zM12 20a8 8 0 118-8 8 8 0 01-8 8z"/><path d="M17.2 14.1l-1.1-.5a1 1 0 00-1.1.2l-.7.8a6 6 0 01-2.9-2.9l.8-.7a1 1 0 00.2-1.1l-.5-1.1a1 1 0 00-1-.6H8.7a1 1 0 00-1 .8A6.1 6.1 0 008 14a6 6 0 006 6 1 1 0 00.8-1v-2.1a1 1 0 00-.6-1z"/></svg>
     </a>
 
-    <a class="icon-btn li" href="www.linkedin.com/in/issa-al-qaisi-a3a204307" target="_blank" title="Issa linkedin">
+    <a class="icon-btn li" href="https://www.linkedin.com/in/issa-al-qaisi-a3a204307/" target="_blank" title="Issa linkedin">
       <!-- LinkedIn SVG -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M4.98 3.5a2.5 2.5 0 11.02 0zM3 8.98h4v12H3zM9 8.98h3.8v1.6h.1c.5-.9 1.7-1.9 3.5-1.9 3.8 0 4.5 2.5 4.5 5.8v6.5h-4v-5.7c0-1.4 0-3.3-2-3.3-2.1 0-2.4 1.6-2.4 3.2v5.8H9z"/></svg>
     </a>
