--- a/cards/issa.html
+++ b/cards/issa.html
@@ -184,9 +184,8 @@ body{
     </a>
   </div>
 
-  <div class="note">رابط البطاقة للاستخدام في الـ NFC: <br>
+  <div class="note"> <br>
     <small style="color:#b8c7d3; direction:ltr; display:block; margin-top:6px;">
-      https://issaahedalqaisi.github.io/NFC_site/cards/abdullah.html
     </small>
   </div>
 </div>
