--- a/cards/issa.html
+++ b/cards/issa.html
@@ -123,7 +123,7 @@ body{
 </head>
 <body>
 
-<div class="profile-wrap" role="region" aria-label="بطاقة عبدالله الشريف">
+<div class="profile-wrap" role="region" aria-label="Issa Card">
   <!-- الصورة (استبدل الرابط برابط Imgur أو آخر) -->
   <img class="avatar" src="https://i.imgur.com/UVOgujk.jpeg" alt="issa">
 
@@ -135,11 +135,11 @@ body{
   <div class="about">
     <strong>About Issa AQ:</strong>
     <br>
-    - Inelligent system engineering.
-    <a></a>
-    - I have more than 2 years experince  with AI like LLMs , Computer vision and more.
-    <a></a>
-    - Model analyst and study of model statuses and their evaluation.
+    <h3>- Inelligent system engineering.</h3>
+  
+    <h3>- I have more than 2 years experince  with AI like LLMs , Computer vision and more.</h3
+                                                                                               >
+    <h3>- Model analyst and study of model statuses and their evaluation.</h3> 
   </div>
 
   <!-- أزرار التواصل (أيقونات SVG داخل كل زر) -->
