--- a/cards/issa.html
+++ b/cards/issa.html
@@ -129,7 +129,7 @@ body{
 
   <!-- الاسم والوصف القصير -->
   <h1 class="name">Issa Ahed Alqaisi</h1>
-  <div class="title">Denaloper</div>
+  <div class="title">Devaloper</div>
 
   <!-- فقرة "عن عبدالله" — نبرة قوية ومحتشمة -->
   <div class="about">
