--- a/cards/issa.html
+++ b/cards/issa.html
@@ -173,12 +173,12 @@ body{
       اتصل
     </a>
 
-    <a class="action email" href="issaahed620@gmail.com" title="إرسال إيميل">
+    <a class="action email" href="mailto:issaahed620@gmail.com" title="إرسال إيميل">
       <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M20 4H4a2 2 0 00-2 2v.2l10 6.2 10-6.2V6a2 2 0 00-2-2zM22 8.5l-10 6.2L2 8.5V18a2 2 0 002 2h16a2 2 0 002-2V8.5z"/></svg>
       ايميل
     </a>
 
-    <a class="action save" href="cards/issa.vcf" download title="حفظ جهة الاتصال">
+    <a class="action save" href="issa.vcf" download title="save contact">
       <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M12 2a3 3 0 013 3v1h3a2 2 0 012 2v10a2 2 0 01-2 2H6a2 2 0 01-2-2V8a2 2 0 012-2h3V5a3 3 0 013-3zM9 9v-1a3 3 0 016 0v1h-6z"/></svg>
       حفظ جهة الاتصال
     </a>
