--- a/cards/issa.html
+++ b/cards/issa.html
@@ -6,19 +6,18 @@
 <title>IssaCard</title>
 <style>
 :root{
-  --bg1:#0f1724;   /* غامق جداً */
-  --bg2:#10243a;   /* كحلي */
-  --accent:#f6b76b;/* ذهب دافيء */
+  --bg1:#0f1724;
+  --bg2:#10243a;
+  --accent:#f6b76b;
   --muted:#9aa6b2;
-  --card:#0f1724cc; /* شفافية لل-glass */
+  --card:#0f1724cc;
   --glass:#ffffff0f;
 }
 
-/* صفحة كاملة */
-*{box-sizing:border-box}
+*{box-sizing:border-box;}
 body{
   margin:0;padding:30px;
-  font-family: "Segoe UI", Tahoma, Arial, sans-serif;
+  font-family:"Segoe UI",Tahoma,Arial,sans-serif;
   background: radial-gradient(1200px 600px at 10% 10%, #112a44 0%, var(--bg1) 18%, var(--bg2) 60%), linear-gradient(180deg, #071028 0%, #071028 100%);
   color:#fff;
   min-height:100vh;
@@ -27,7 +26,6 @@ body{
   justify-content:center;
 }
 
-/* الحاوية */
 .profile-wrap{
   width:360px;
   border-radius:22px;
@@ -35,13 +33,11 @@ body{
   position:relative;
   overflow:hidden;
   box-shadow: 0 30px 80px rgba(2,6,23,0.72);
-  background:
-    linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+  background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
   backdrop-filter: blur(6px);
   border: 1px solid rgba(255,255,255,0.04);
 }
 
-/* شعار دائري خلف الصورة (ديكور) */
 .profile-wrap::before{
   content:"";
   position:absolute;
@@ -53,7 +49,6 @@ body{
   transform: rotate(20deg);
 }
 
-/* الصورة */
 .avatar {
   width:140px;height:140px;border-radius:50%;
   margin:0 auto 14px auto;display:block;
@@ -63,11 +58,9 @@ body{
 }
 .avatar:hover{ transform: scale(1.03); }
 
-/* الاسم والعنوان */
 .name { text-align:center; margin:0 0 6px; font-size:22px; letter-spacing:0.4px; color:#fff; font-weight:700; }
 .title { text-align:center; margin:0 0 16px; color:var(--muted); font-size:14px; }
 
-/* الوصف (About) */
 .about {
   background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
   border-radius:12px; padding:12px 14px; color:#d6dde3; font-size:13px; line-height:1.35;
@@ -75,23 +68,19 @@ body{
   box-shadow: 0 8px 18px rgba(2,6,23,0.45);
 }
 
-/* أزرار الشبكات - أيقونات دائرية */
 .socials { display:flex; gap:10px; justify-content:center; margin-bottom:16px; }
 .icon-btn{
-  width:56px;height:56px;border-radius:12px;display:inline-flex;align-items:center;justify-content:center;
-  color:#fff;text-decoration:none;font-weight:700;
+  width:56px;height:56px;border-radius:50%;display:inline-flex;align-items:center;justify-content:center;
   transition: transform .18s ease, box-shadow .18s ease;
   box-shadow: 0 8px 22px rgba(2,6,23,0.5);
+  overflow:hidden;
 }
-/* ألوان مرتبة ومحترفة (ناعمة لكن قوية) */
-.icon-btn.fb{ background: linear-gradient(180deg,#2f4f91,#2b3f78); }
-.icon-btn.ig{ background: linear-gradient(180deg,#c13584,#9b2b60); }
-.icon-btn.wa{ background: linear-gradient(180deg,#00b66a,#0c8f4f); }
-.icon-btn.li{ background: linear-gradient(180deg,#0d66b2,#074e8a); }
+.icon-btn img{
+  width:36px; height:36px;
+  border-radius:50%;
+}
+.icon-btn:hover{ transform: translateY(-6px) scale(1.05); box-shadow: 0 18px 40px rgba(0,0,0,0.6); }
 
-.icon-btn:hover{ transform: translateY(-6px) scale(1.03); box-shadow: 0 18px 40px rgba(0,0,0,0.6); }
-
-/* صف الاتصال (Call - Email - Save) */
 .actions{ display:flex; gap:10px; margin-top:6px; justify-content:center; flex-wrap:wrap; }
 .action{
   display:inline-flex;align-items:center;gap:10px;padding:10px 12px;border-radius:12px;
@@ -103,90 +92,70 @@ body{
 .action.call{ background: linear-gradient(180deg,#ffd29b,#ffb26b); color:#071028; }
 .action.email{ background: linear-gradient(180deg,#d1e8ff,#a9d3ff); color:#071028; }
 .action.save{ background: linear-gradient(45deg,#ff7e5f,#feb47b); color:#071028; }
-
 .action:hover{ transform: translateY(-6px); }
-
-/* أيقونات داخل الأزرار صغيرة */
 .action svg{ width:18px;height:18px; }
 
-/* ملاحظة صغيرة */
 .note{ text-align:center;color:var(--muted);font-size:12px;margin-top:12px; }
 
-/* استجابة للموبايل */
 @media (max-width:420px){
   body{ padding:18px; }
   .profile-wrap{ width:100%; padding:22px; }
   .avatar{ width:120px;height:120px; }
   .icon-btn{ width:50px;height:50px; }
+  .icon-btn img{ width:30px;height:30px; }
 }
 </style>
 </head>
 <body>
 
 <div class="profile-wrap" role="region" aria-label="Issa Card">
-  <!-- الصورة (استبدل الرابط برابط Imgur أو آخر) -->
   <img class="avatar" src="https://i.imgur.com/UVOgujk.jpeg" alt="issa">
 
-  <!-- الاسم والوصف القصير -->
   <h1 class="name">Issa Ahed Alqaisi</h1>
   <div class="title">Devaloper</div>
 
-  <!-- فقرة "عن عبدالله" — نبرة قوية ومحتشمة -->
   <div class="about">
     <strong>About Issa AQ:</strong>
     <br>
-    <h3>- Inelligent system engineering.</h3>
-  
-    <h3>- I have more than 2 years experince  with AI like LLMs , Computer vision and more.</h3
-                                                                                               >
-    <h3>- Model analyst and study of model statuses and their evaluation.</h3> 
+    <h3>- Intelligent system engineering.</h3>
+    <h3>- I have more than 2 years experience with AI like LLMs, Computer Vision and more.</h3>
+    <h3>- Model analyst and study of model statuses and their evaluation.</h3>
   </div>
 
-  <!-- أزرار التواصل (أيقونات SVG داخل كل زر) -->
-  <div class="socials" role="navigation" aria-label="روابط التواصل">
-    <a class="icon-btn fb" href="https://www.facebook.com/issa.alqaisi.545" target="_blank" title="Issa facebook">
-      <!-- Facebook SVG -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M22 12a10 10 0 10-11.5 9.9v-7h-2.2V12h2.2V9.8c0-2.2 1.3-3.4 3.3-3.4.95 0 1.95.17 1.95.17v2.15h-1.1c-1.09 0-1.43.68-1.43 1.38V12h2.44l-.39 2.92H13.5v7A10 10 0 0022 12z"/></svg>
+  <div class="socials" role="navigation" aria-label="Social Links">
+    <a class="icon-btn fb" href="https://www.facebook.com/issa.alqaisi.545" target="_blank" title="Facebook">
+      <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook">
     </a>
-
-    <a class="icon-btn ig" href="https://www.instagram.com/i.s_44l?igsh=MTRnaHI3dGY4cmt0ZQ==" target="_blank" title=" Issa insta ">
-      <!-- Instagram SVG -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 7.3A4.2 4.2 0 1016.2 13 4.2 4.2 0 0012 9.3zm5.4-3.6a1.2 1.2 0 11-1.2 1.2 1.2 1.2 0 011.2-1.2z"/></svg>
+    <a class="icon-btn ig" href="https://www.instagram.com/i.s_44l" target="_blank" title="Instagram">
+      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
     </a>
-
-    <a class="icon-btn wa" href="https://wa.me/+962781179190" target="_blank" title="Issa Whats">
-      <!-- WhatsApp SVG -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M20.5 3.5A11.9 11.9 0 0012 .1 11.9 11.9 0 003.5 3.5a11.9 11.9 0 00-3 8.5A11.9 11.9 0 003.5 19.5L2 23l3.5-1.5A11.9 11.9 0 0012 23a11.9 11.9 0 008.5-3.5A11.9 11.9 0 0023 12a11.9 11.9 0 00-2.5-8.5zM12 20a8 8 0 118-8 8 8 0 01-8 8z"/><path d="M17.2 14.1l-1.1-.5a1 1 0 00-1.1.2l-.7.8a6 6 0 01-2.9-2.9l.8-.7a1 1 0 00.2-1.1l-.5-1.1a1 1 0 00-1-.6H8.7a1 1 0 00-1 .8A6.1 6.1 0 008 14a6 6 0 006 6 1 1 0 00.8-1v-2.1a1 1 0 00-.6-1z"/></svg>
+    <a class="icon-btn wa" href="https://wa.me/+962781179190" target="_blank" title="WhatsApp">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
     </a>
-
-    <a class="icon-btn li" href="https://www.linkedin.com/in/issa-al-qaisi-a3a204307/" target="_blank" title="Issa linkedin">
-      <!-- LinkedIn SVG -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="white"><path d="M4.98 3.5a2.5 2.5 0 11.02 0zM3 8.98h4v12H3zM9 8.98h3.8v1.6h.1c.5-.9 1.7-1.9 3.5-1.9 3.8 0 4.5 2.5 4.5 5.8v6.5h-4v-5.7c0-1.4 0-3.3-2-3.3-2.1 0-2.4 1.6-2.4 3.2v5.8H9z"/></svg>
+    <a class="icon-btn li" href="https://www.linkedin.com/in/issa-al-qaisi-a3a204307/" target="_blank" title="LinkedIn">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
     </a>
   </div>
 
-  <!-- أزرار الاتصال والحفظ -->
-  <div class="actions" role="group" aria-label="إجراءات الاتصال">
-    <a class="action call" href="tel:0781179190" title="اتصال مباشر">
-      <!-- phone svg -->
+  <div class="actions" role="group" aria-label="Contact Actions">
+    <a class="action call" href="tel:0781179190" title="Call me">
       <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M6.6 10.79a15.05 15.05 0 006.61 6.61l2.2-2.2a1 1 0 01.98-.26c1.1.35 2.3.54 3.55.54a1 1 0 011 1V20a1 1 0 01-1 1C9.39 21 3 14.61 3 6a1 1 0 011-1h2.5a1 1 0 011 1c0 1.25.19 2.45.54 3.55a1 1 0 01-.26.98l-2.18 2.26z"/></svg>
-      اتصل
+      Call me
     </a>
 
-    <a class="action email" href="mailto:issaahed620@gmail.com" title="إرسال إيميل">
+    <a class="action email" href="mailto:issaahed620@gmail.com" title="Email me">
       <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M20 4H4a2 2 0 00-2 2v.2l10 6.2 10-6.2V6a2 2 0 00-2-2zM22 8.5l-10 6.2L2 8.5V18a2 2 0 002 2h16a2 2 0 002-2V8.5z"/></svg>
-      ايميل
+      Email
     </a>
 
-    <a class="action save" href="issa.vcf" download title="save contact">
+    <a class="action save" href="issa.vcf" download title="Save contact">
       <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M12 2a3 3 0 013 3v1h3a2 2 0 012 2v10a2 2 0 01-2 2H6a2 2 0 01-2-2V8a2 2 0 012-2h3V5a3 3 0 013-3zM9 9v-1a3 3 0 016 0v1h-6z"/></svg>
-      حفظ جهة الاتصال
+      Save contact
     </a>
   </div>
 
-  <div class="note"> <br>
-    <small style="color:#b8c7d3; direction:ltr; display:block; margin-top:6px;">
-    </small>
+  <div class="note"><br>
+    <small style="color:#b8c7d3; direction:ltr; display:block; margin-top:6px;"></small>
   </div>
 </div>
 
