--- a/cards/issa.html
+++ b/cards/issa.html
@@ -148,7 +148,7 @@ body{
       Email
     </a>
 
-    <a class="action save" href="issa.vcf" download title="Save contact">
+    <a class="action save" href="VCF/issa.vcf" download title="Save contact">
       <svg viewBox="0 0 24 24" width="18" height="18" fill="#071028" aria-hidden="true"><path d="M12 2a3 3 0 013 3v1h3a2 2 0 012 2v10a2 2 0 01-2 2H6a2 2 0 01-2-2V8a2 2 0 012-2h3V5a3 3 0 013-3zM9 9v-1a3 3 0 016 0v1h-6z"/></svg>
       Save contact
     </a>
