--- a/cards/Future.html
+++ b/cards/Future.html
@@ -360,7 +360,7 @@
                                 <div class="contact-name">عماد الدرباشي</div>
                                 <div class="contact-role">مبيعات</div>
                             </div>
-                            <div class="contact-number">+962795830279</div>
+                            <div class="contact-number">+962795830276</div>
                         </li>
                     </ul>
                 </div>
@@ -392,7 +392,7 @@
                             <div class="contact-number">+962799261490</div>
                         </li>
                         <li class="contact-item">
-                            <a href="tel:+962795830279" class="contact-icon">
+                            <a href="tel:+962795830276" class="contact-icon">
                                 <i class="fas fa-phone"></i>
                             </a>
                             <div class="contact-details">
@@ -408,7 +408,7 @@
             <div class="social-section">
                 <h2 class="section-title" style="justify-content: center;">
                     <i class="fas fa-hashtag"></i>
-                    وسائل التواصل الاجتماعي
+                    Social Media
                 </h2>
                 <div class="social-links">
                     <a href="https://www.facebook.com/share/1BWTUNcunN/?mibextid=wwXIfr" class="social-link facebook" target="_blank" title="فيسبوك">
@@ -426,11 +426,11 @@
             <div class="action-buttons">
                 <a href="VCF/Future.vcf" class="action-btn save" download>
                     <i class="fas fa-download"></i>
-                    <span>حفظ جهة الاتصال</span>
+                    <span>Save Contact</span>
                 </a>
                 <a href="tel:+962798457949" class="action-btn">
                     <i class="fas fa-phone"></i>
-                    <span>اتصال فوري</span>
+                    <span>Call Now</span>
                 </a>
             </div>
         </div>
