--- a/cards/Future.html
+++ b/cards/Future.html
@@ -411,7 +411,7 @@
                     Social Media
                 </h2>
                 <div class="social-links">
-                    <a href="https://www.facebook.com/share/1BWTUNcunN/?mibextid=wwXIfr" class="social-link facebook" target="_blank" title="فيسبوك">
+                    <a href="https://www.instagram.com/futures_journey?igsh=MXUwNG9lNWE5ZWIwcg%3D%3D&utm_source=qr" class="social-link facebook" target="_blank" title="فيسبوك">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                     <a href="https://www.instagram.com/futures_journey?igsh=MXUwNG9lNWE5ZWIwcg%3D%3D&utm_source=qr" class="social-link instagram" target="_blank" title="انستغرام">
