--- a/cards/Future.html
+++ b/cards/Future.html
@@ -16,7 +16,7 @@
         
         body {
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
-            color: #2525112;
+            color: #1e3c72;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
