--- a/cards/Future.html
+++ b/cards/Future.html
@@ -15,8 +15,8 @@
         }
         
         body {
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
-            color: #0a0e17;
+            background: linear-gradient(135deg, #1e3c72 0%, #0a0e17 100%);
+            color: #333;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
