--- a/cards/Future.html
+++ b/cards/Future.html
@@ -15,7 +15,7 @@
         }
         
         body {
-            background: linear-gradient(135deg, #1e3c72 0%, #0a0e17 100%);
+            background: #0a0e17;
             color: #333;
             min-height: 100vh;
             display: flex;
