--- a/cards/Future.html
+++ b/cards/Future.html
@@ -15,7 +15,7 @@
         }
         
         body {
-            background: #0a0e17;
+            background: #111827 ;
             color: #333;
             min-height: 100vh;
             display: flex;
