--- a/cards/Emad.html
+++ b/cards/Emad.html
@@ -312,7 +312,7 @@
             <div class="about-text">
                 مسؤول التدريب في مؤسسة رحلة المستقبل للبرمجة. 
                 <br>
-                متخصص في تطوير المهارات التقنية والبرمجية.
+                تخصص علوم مالية ومصرفية وخبرة بالتدريب على التسويق.
             </div>
         </div>
 
