--- a/cards/Eng_Laith_Alkayad.html
+++ b/cards/Eng_Laith_Alkayad.html
@@ -329,7 +329,7 @@
         <!-- About Section -->
         <div class="about-section fade-in delay-1">
             <div class="about-text">
-                شركة عبر القارات , شركة مختصة في بيع الفلاتر
+                شركة عبر القارات , شركة مختصة في بيع الفلاتر , تبديل فلاتر المياه بشكل دوري هو الطريقة الأفضل لضمان نقاء المياه وجودتها
             </div>
         </div>
 
