Remove copyright year from footer text

--- a/cards/Eng_Laith_Alkayad.html
+++ b/cards/Eng_Laith_Alkayad.html
@@ -379,7 +379,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">© 2024 Eng. Laith Alkayad. All rights reserved.</p>
+            <p class="footer-text"> Laith Alkayad. All rights reserved.</p>
         </div>
     </footer>
 
