--- a/cards/Eng_Laith_Alkayad.html
+++ b/cards/Eng_Laith_Alkayad.html
@@ -320,7 +320,7 @@
         <img src="https://i.imgur.com/xQGgOE7.jpeg" alt="Eng. Laith Alkayad" class="profile-banner">
         <div class="profile-overlay">
             <h1 class="profile-name">Eng. Laith Alkayad</h1>
-            <p class="profile-title">Cross Continents Company</p>
+            <p class="profile-title">Transcontinetal Company</p>
         </div>
     </header>
 
