Remove copyright year from footer text

--- a/cards/Reem.html
+++ b/cards/Reem.html
@@ -427,7 +427,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">© 2024 Reem Ammari. All rights reserved.</p>
+            <p class="footer-text">Reem Ammari. All rights reserved.</p>
         </div>
     </footer>
 
