Update Threads link icon with text

--- a/cards/Reem.html
+++ b/cards/Reem.html
@@ -390,7 +390,7 @@
                 </a>
                 
                 <a href="https://www.threads.com/@reemammari77" class="social-icon threads" target="_blank">
-                    <i class="fas fa-comment-dots"></i>
+                    <span style="font-size: 0.9rem; font-weight: bold;">Th</span>
                 </a>
                 
                 <a href="https://on.soundcloud.com/0ocwsfvfw7zjofreoO" class="social-icon soundcloud" target="_blank">
