--- a/cards/Reem.html
+++ b/cards/Reem.html
@@ -357,7 +357,7 @@
 <body>
     <!-- Header Section - Facebook Style -->
     <header class="profile-header fade-in">
-        <img src="https://i.imgur.com/Nh1Ebxp.jpeg" alt="Cover Photo" class="cover-photo">
+        <img src="https://i.imgur.com/ygjh3dp.jpeg" alt="Cover Photo" class="cover-photo">
         <div class="profile-info">
             <div class="profile-image-container">
                 <img src="https://i.imgur.com/MltKWPR.jpeg" alt="Reem Ammari" class="profile-image">
