--- a/cards/afamia.html
+++ b/cards/afamia.html
@@ -400,7 +400,7 @@
                 <img src="https://i.imgur.com/i4N6QIE.jpeg" alt="Afamia Boutique" class="profile-image">
             </div>
             <h1 class="profile-name">Afamia Boutique</h1>
-            <p class="profile-title">متجر أفساميا للأزياء</p>
+            <p class="profile-title">متجر أفاميا للأزياء</p>
         </div>
     </header>
 
