Remove copyright symbol from footer text

--- a/cards/Future.html
+++ b/cards/Future.html
@@ -415,7 +415,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">© 2024 Future's Journey Programming Institution. All rights reserved.</p>
+            <p class="footer-text">Future's Journey Programming Institution. All rights reserved.</p>
         </div>
     </footer>
 
