--- a/cards/Omar_Kalthom.html
+++ b/cards/Omar_Kalthom.html
@@ -433,7 +433,7 @@
                 <i class="fas fa-phone"></i>
                 Call Now
             </a>
-            <a href="https://wa.me/962798457949" class="action-button nfc">
+            <a href="https://www.instagram.com/futures_journey_programming_in" class="action-button nfc" target="_blank">
                 <i class="fas fa-id-card"></i>
                 NFC Card Request
             </a>
