Update contact section and title to English
Removed the Arabic contact section and updated the title to English.

--- a/cards/Bahaa_Abu_Baqi.html
+++ b/cards/Bahaa_Abu_Baqi.html
@@ -435,19 +435,11 @@
         </div>
 
         <!-- Contact Me Section -->
-        <div class="contact-section fade-in delay-2">
-            <div class="contact-button">
-                <i class="fas fa-envelope contact-icon"></i>
-                <div class="contact-info">
-                    <div class="contact-name">تواصل معي</div>
-                    <div class="contact-text">للاستفسارات والتعاون</div>
-                </div>
-            </div>
-        </div>
+
 
         <!-- Social Icons -->
         <div class="social-section fade-in delay-2">
-            <h2 class="social-title">تواصل معي عبر</h2>
+            <h2 class="social-title">Contact me</h2>
             <div class="social-icons-grid">
                 <a href="https://www.instagram.com/bahaaabubaqi/" class="social-icon instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
