--- a/cards/Bahaa_Abu_Baqi.html
+++ b/cards/Bahaa_Abu_Baqi.html
@@ -411,8 +411,8 @@
             <div class="profile-image-container">
                 <img src="https://i.imgur.com/wyScz6d.jpeg" alt="بهاء الدين أبو باقي" class="profile-image">
             </div>
-            <h1 class="profile-name">بهاء الدين أبو باقي</h1>
-            <p class="profile-title">مصمم ومعد ومنفذ مشاريع تعليمية</p>
+            <h1 class="profile-name">Bahaa Abu Baqi</h1>
+            <p class="profile-title">Designer, developer, and implementer of educational projects</p>
         </div>
     </header>
 
