--- a/cards/Bahaa_Abu_Baqi.html
+++ b/cards/Bahaa_Abu_Baqi.html
@@ -491,7 +491,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">  بهاء الدين أبو باقي  </p>
+            <p class="footer-text">  Bahaa Abu Baqi  </p>
         </div>
     </footer>
 
