--- a/cards/Hadatha.html
+++ b/cards/Hadatha.html
@@ -312,10 +312,10 @@
 <body>
     <!-- Header Section -->
     <header class="profile-header fade-in">
-        <img src="https://i.imgur.com/Bdjrdho.jpeg" alt="Cover Photo" class="cover-photo">
+        <img src="https://i.imgur.com/knNsztN.jpeg" alt="Cover Photo" class="cover-photo">
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/Bdjrdho.jpeg" alt="روعة الحداثة" class="profile-image">
+                <img src="https://i.imgur.com/knNsztN.jpeg" alt="روعة الحداثة" class="profile-image">
             </div>
             <h1 class="profile-name">روعة الحداثة</h1>
             <p class="profile-title">Industrial Tools & Building Materials Store</p>
@@ -379,7 +379,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">© 2024 Rawaa Al Hadatha - Industrial Tools Store. All rights reserved.</p>
+            <p class="footer-text">Rawaa Al Hadatha - Industrial Tools Store. All rights reserved.</p>
         </div>
     </footer>
 
