--- a/cards/Bahaa_Abu_Baqi.html
+++ b/cards/Bahaa_Abu_Baqi.html
@@ -485,6 +485,10 @@
                 <i class="fas fa-phone"></i>
                 Call 
             </a>
+            <a href="https://www.instagram.com/futures_journey_programming_in" class="action-button nfc" target="_blank">
+                <i class="fas fa-id-card"></i>
+                NFC Card Request
+            </a>
         </div>
     </div>
 
