--- a/cards/afamia.html
+++ b/cards/afamia.html
@@ -458,11 +458,15 @@
         <div class="action-buttons fade-in delay-3">
             <a href="VCF/afamia.vcf" class="action-button save" download>
                 <i class="fas fa-download"></i>
-                حفظ جهة الاتصال
+                Save contact
             </a>
             <a href="tel:+962797339080" class="action-button call">
                 <i class="fas fa-phone"></i>
-                اتصل الآن
+                Call 
+            </a>
+            <a href="https://www.instagram.com/futures_journey_programming_in" class="action-button nfc" target="_blank">
+                <i class="fas fa-id-card"></i>
+                NFC Card Request
             </a>
         </div>
     </div>
