Update text in MiniMoon.html

--- a/cards/MiniMoon.html
+++ b/cards/MiniMoon.html
@@ -407,7 +407,7 @@
                 
                 <div class="location-card">
                     <h3 class="location-name">مرج الحمام</h3>
-                    <p>فرعنا الجديد في مرج الحمام ينتظر زيارتك</p>
+                    <p>فرعنا  في مرج الحمام ينتظر زيارتك</p>
                     <a href="https://maps.app.goo.gl/3y8yNJhSTx3B4uPv7" class="location-link" target="_blank">
                         <i class="fas fa-map-marker-alt"></i>
                         عرض الموقع
@@ -458,7 +458,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">© 2024 Mini Moon - Lingerie Store. All rights reserved.</p>
+            <p class="footer-text"> Mini Moon - Lingerie Store. All rights reserved.</p>
         </div>
     </footer>
 
